feat: add some Leptos components for forms

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "A Leptos component library based on Bulma CSS framework."
 version = "0.0.0-alpha.3"
 edition = "2021"
 authors = ["Javier E. <jaedns@gmail.com>"]
-license-file = "LICENSE"
+license = "MIT"
 readme = "README.md"
 repository = "https://github.com/javierEd/leptos-bulma.git"
 categories = ["gui"]
