docs: add Leptos Icons with Font Awesome package to the website

--- a/website/Cargo.toml
+++ b/website/Cargo.toml
@@ -19,12 +19,14 @@ leptos-bulma = { path = "../" }
 [dependencies]
 console_error_panic_hook = "0.1.7"
 http = "1.1.0"
+icondata_fa = "0.0.10"
 leptos = "0.6.9"
 leptos-bulma = { path = "../" }
 leptos_i18n = { version = "0.3.3", default-features = false, features = [
     "cookie",
     "yaml_files",
 ] }
+leptos_icons = "0.3.0"
 leptos_integration_utils = { version = "0.6.9", optional = true }
 leptos_meta = "0.6.9"
 leptos_router = "0.6.9"
