--- a/website/Cargo.toml
+++ b/website/Cargo.toml
@@ -34,7 +34,9 @@ leptos_router = "0.6.10"
 leptos-spin = { version = "0.1.0", optional = true }
 serde = "1.0.197"
 spin-sdk = { version = "2.2.0", optional = true }
-wasm-bindgen = { version = "0.2.92", optional = true }
+wasm-bindgen = "0.2.92"
+wasm-bindgen-futures = "0.4.42"
+web-sys = "0.3.69"
 
 [features]
 csr = ["leptos/csr", "leptos_i18n/csr", "leptos_meta/csr", "leptos_router/csr"]
@@ -43,7 +45,6 @@ hydrate = [
     "leptos_i18n/hydrate",
     "leptos_meta/hydrate",
     "leptos_router/hydrate",
-    "dep:wasm-bindgen",
 ]
 ssr = [
     "leptos/ssr",
