--- a/website/Cargo.toml
+++ b/website/Cargo.toml
@@ -21,18 +21,19 @@ console_error_panic_hook = "0.1.7"
 http = "1.1.0"
 icondata_fa = "0.0.10"
 indoc = "2.0.5"
-leptos = "0.6.10"
+leptos = "0.6.11"
 leptos-bulma = { path = "../" }
 leptos_i18n = { version = "0.3.3", default-features = false, features = [
     "cookie",
     "yaml_files",
 ] }
 leptos_icons = "0.3.0"
-leptos_integration_utils = { version = "0.6.10", optional = true }
-leptos_meta = "0.6.10"
-leptos_router = "0.6.10"
+leptos_integration_utils = { version = "0.6.11", optional = true }
+leptos_meta = "0.6.11"
+leptos_router = "0.6.11"
 leptos-spin = { version = "0.1.0", optional = true }
 serde = "1.0.197"
+slug = "0.1.5"
 spin-sdk = { version = "2.2.0", optional = true }
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
