--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,6 @@ exclude = [
 publish = true
 
 [dependencies]
-grass = { version = "0.13", default-features = false }
 icondata_core = { version = "0.1", optional = true }
 icondata_fa = { version = "0.0", optional = true }
 leptos = "0.6"
@@ -31,6 +30,7 @@ web-sys = "0.3"
 
 [features]
 default = ["icondata-fa"]
+build-script = []
 leptos-icons = ["dep:icondata_core", "dep:leptos_icons"]
 icondata-fa = ["leptos-icons", "dep:icondata_fa"]
 ssr = ["leptos-use/ssr"]
