--- a/website/spin.toml
+++ b/website/spin.toml
@@ -2,9 +2,9 @@ spin_manifest_version = 2
 
 [application]
 name = "leptos-bulma-website"
-version = "0.0.0-alpha.13"
+version = "0.0.0"
 authors = ["Javier E. <jaedns@gmail.com>"]
-description = ""
+description = "Official website for Leptos Bulma."
 
 [[trigger.http]]
 route = "/..."
