feat: add enums for colors, states and sizes.
- Also add more props to `BButton` to `BButtons`.
- Add more examples for buttons on the website.
- And fix prop `class` on `BButton` and `BButtons` to avoid disabling other props on change.

--- a/website/Cargo.toml
+++ b/website/Cargo.toml
@@ -21,6 +21,7 @@ leptos-bulma = { path = "../", default-features = false, features = [
 [dependencies]
 console_error_panic_hook = "0.1.7"
 http = "1.1.0"
+icondata_core = "0.1.0"
 leptos = "0.6.11"
 leptos-bulma = { path = "../" }
 leptos_i18n = { version = "0.3.3", default-features = false, features = [
