--- a/website/Cargo.toml
+++ b/website/Cargo.toml
@@ -19,6 +19,7 @@ leptos-bulma = { path = "../", default-features = false, features = [
 ] }
 
 [dependencies]
+codee = "0.1.2"
 console_error_panic_hook = "0.1.7"
 http = "1.1.0"
 icondata_core = "0.1.0"
@@ -51,13 +52,14 @@ leptos_integration_utils = { version = "0.6.11", optional = true }
 leptos_meta = "0.6.11"
 leptos_router = "0.6.11"
 leptos-spin = { version = "0.1.0", optional = true }
-leptos-use = "0.10.10"
-serde = "1.0.201"
-slug = "0.1.5"
+leptos-use = "0.12.0"
+serde = "1.0.208"
+slug = "0.1.6"
 spin-sdk = { version = "2.2.0", optional = true }
+time = "0.3.36"
 wasm-bindgen = "0.2.92"
-wasm-bindgen-futures = "0.4.42"
-web-sys = "0.3.69"
+wasm-bindgen-futures = "0.4.43"
+web-sys = "0.3.70"
 
 [features]
 csr = ["leptos/csr", "leptos_i18n/csr", "leptos_meta/csr", "leptos_router/csr"]
