build: upgrade dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,8 +42,10 @@ icondata_wi = { version = "0.0", optional = true }
 leptos = "0.6"
 leptos_icons = { version = "0.3", optional = true }
 leptos_router = "0.6"
-leptos-use = "0.12"
-web-sys = "0.3"
+leptos-use = { version = "0.13", default-features = false, features = [
+    "on_click_outside",
+] }
+web-sys = { version = "0.3", features = ["File", "FileList"] }
 
 [features]
 default = []
